[package]
name = "tflite"
version = "0.10.0"
authors = ["Boncheol Gu <boncheol.gu@gmail.com>"]
description = "Rust bindings for TensorFlow Lite"
keywords = ["tensorflow", "tflite", "bindings"]
license = "MIT/Apache-2.0"
repository = "https://github.com/boncheolgu/tflite-rs"
readme = "README.md"
edition = "2018"
documentation = "https://docs.rs/crate/tflite"

[dependencies]
cpp = "0.5"
cxx = "1"
libc = "0.2"
maybe-owned = "0.3"
thiserror = "1"

[build-dependencies]
bart = { version = "0.1", optional = true }
bart_derive = { version = "0.1", optional = true }
bindgen = { version = "0.58", default-features = false, features = ["runtime"] }
cpp_build = "0.5"
cxx-build = "1"
fs_extra = { version = "1.2", optional = true }

[features]
build = ["fs_extra"]
default = ["build"]
debug_tflite = ["build"] # use "libtensorflow-lite.a" built in debug mode
generate_model_apis = ["bart", "bart_derive"]
no_micro = ["build"]

[package.metadata.docs.rs]
all-features = false
no-default-features = true
default-target = "x86_64-unknown-linux-gnu"
